--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
-    background-color: pink;
+    background-color: rgb(202,190,40);
 }
 
 h1 {
-    color:rgb(198,12,100);
+    color:rgb(10,250,10);
     text-align: center;
     }
 h2 {
