--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ h2 {
     color:rgb(10,100,10);
     text-align: center;
     }
+h5 {
+    color:rgb(10,100,10);
+    text-align: center;
+    }
 p1 {
     color:red;
     text-align: left;
